--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,41 @@
 Package: GolemShinyTemplate
 Title: Golem Shiny Template
 Version: 0.0.0.9000
-Authors@R: person('Tyrone', 'Hunt', email = 'tyrone.hunt@MAIL.COM', role = c('cre', 'aut'))
-Description: This is a template golem application for shiny, for learning purposes.
+Authors@R: 
+    person(given = "Tyrone",
+           family = "Hunt",
+           role = c("cre", "aut"),
+           email = "tyrone.hunt@NULL.com")
+Description: This is a template golem application for shiny, for
+    learning purposes.
 License: MIT + file LICENSE
-Imports: 
-    config,
-    golem,
-    shiny
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 6.1.1
 URL: http://www.github.com/tyronehunt
 BugReports: http://www.github.com/tyronehunt/issues
+Depends: 
+    R (>= 2.10)
+Imports: 
+    colourvalues,
+    config,
+    dplyr,
+    ggplot2,
+    glue,
+    golem,
+    htmltools,
+    magrittr,
+    purrr,
+    rlang,
+    shiny,
+    styler,
+    withr,
+    markdown,
+    pkgload
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat,
+    processx
+VignetteBuilder: 
+    knitr
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 7.1.1
